assets/tcn.css
/* Link in footer; looks like regular text. */
.atomic-badgers {
    color: inherit;
    text-decoration: inherit;
}

/* Make figures stand out from text */
figure {
    padding: 1rem;
    margin: 1rem;
    background-color: #eee;
    border-radius: .5rem;
    /* Flex/wrap images if multiple, and center them. */
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
}

figure img {
    margin: .25em;
}

figure figcaption {
    padding: .5rem 0 0;
    text-align: center;
    /* Force this to split onto its own line */
    width: 100%;
}

/* Separate blockquotes from their context and indent them */
blockquote {
    border-image: linear-gradient(to right, white, #888, white) 1;
    border-width: 1px;
    border-style: solid;
    border-left: none;
    border-right: none;
}

/* Provide some guides to make tables easier to read */
table {
    border-collapse: collapse;
}
table thead th {
    vertical-align: bottom;
    border-bottom: 2px solid #ccc;
}
table td, table th {
    padding: .25rem 1ch;
    border-top: 1px solid #ccc;
}
table tbody tr:nth-child(even) {
    background-color: rgba(0, 0, 0, .05);
}

/* Utility classes */

/* Call attention to a block */
.attention, .information {
    padding: .5em;
    border-radius: .5rem;
}
.attention {
    background-color: #fee;
}
.information {
    background-color: #eef;
}

